<resources>
    <string name="address">Address</string>
    <string name="app_name">Contacts</string>
    <string name="add_contact">Add New Contact</string>
    <string name="call">Call</string>
    <string name="email">eMail: </string>
    <string name="email_message">Message</string>
    <string name="email_send">eMail</string>
    <string name="email_subject">Subject</string>
    <string name="example_address">1234 Example Street</string>
    <string name="example_email_address">examplename@example.com</string>
    <string name="example_name">Example Name</string>
    <string name="example_phone_number">###-###-####</string>
    <string name="find">Find</string>
    <string name="gmail_address">Gmail Address</string>
    <string name="gmail_password">Gmail Password</string>
    <string name="name">Name: </string>
    <string name="placeholder_name">Placeholder Name</string>
    <string name="phone_number">Phone Number: </string>
    <string name="save_contact">Save Contact</string>
</resources>
