<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    tools:context=".ContactActivity">

    <TextView
        android:id="@+id/displayNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/placeholder_name"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/displayPhoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_phone_number" />

    <Button
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call" />

    <TextView
        android:id="@+id/displayEMailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_email_address" />

    <Button
        android:id="@+id/eMailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_send" />
</GridLayout>