<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".JavaMailActivity">

    <TextView
        android:id="@+id/recipientTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/mailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/gmail_address"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/gmail_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/subjectEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/email_subject"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/email_message"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:minLines="18"
        android:maxLines="20"
        android:singleLine="false"
        android:textSize="16sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sendFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</LinearLayout>